# c-testing

./: .gitignore  CMakeLists.txt  Vector3.cpp  Vector3.h  basic.cpp  basic.h  guessTheNumber.cpp  guessTheNumber.h  main.cpp  makefile  math.cpp  math.h
include/: basic.h
src/: Vector3.cpp  Vector3.h  basic.cpp  basic.h  guessTheNumber.cpp  guessTheNumber.h  main.cpp  math.cpp  math.h
